--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "styled-components": "^5.2.1",
     "swr": "^0.5.6",
     "web3": "^1.7.1"
